[metadata]
name = gsb
summary = Create text-based game servers with a Flask-like API.
description-file = README.md
home-page = https://github.com/chrisnorman7/game-server-base
license = MPL-2

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude=env

[isort]
src_paths=gsb/
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
ensure_newline_before_comments = True

[mypy]
files=gsb/
ignore_missing_imports=true
